<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#336"
    tools:context="com.example.codetride.basketballapp.MainActivity">


    <Button
        android:id="@+id/btnAway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000033"
        android:text="@string/btnaway"
        android:textColor="#FFFFFF"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap" />

    <ImageView
        android:id="@+id/imgChamps"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:contentDescription="@android:string/selectTextMode"
        android:src="@drawable/champs"
        android:layout_above="@+id/textView7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:text="@string/btnresults" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:text="@string/lblmatch_centre"
        android:background="#CCCCCC"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/btnResults"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#000033"
        android:text="@string/btnhome"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        android:text="@string/lblsundowns_fc"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblmanchester_united"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"
        android:layout_marginBottom="41dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_above="@+id/btnHome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/lblHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignLeft="@+id/lblAway"
        android:layout_alignStart="@+id/lblAway"
        android:text="@string/lblHscore"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblAway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblAscore"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignLeft="@+id/btnAway"
        android:layout_alignStart="@+id/btnAway"
        android:layout_marginLeft="31dp"
        android:layout_marginStart="31dp" />

    <Button
        android:id="@+id/btnLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnResults"
        android:layout_centerHorizontal="true"
        android:text="@string/live_score"
        android:background="#000033"
        android:textColor="#FFFFFF"/>

</RelativeLayout>
